# edge-ml-accelerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.yml
buildscripts/: build_edgeml.sh  build_project.sh  localbuild.sh  update_os.sh
examples/: README.md  example_config_GENERIC.json  example_config_GENERIC.yml  example_config_OPENCV.json
samples/: README.md
samples/greengrass_component/: build_deploy_gdk.sh
samples/greengrass_component/com.aws.edgeml.accelerator/greengrass/: deployment-config.json  gdk-config.json  recipe.json
source/app/: CMakeLists.txt  main.cc
source/plugins/capture/: CMakeLists.txt
source/plugins/capture/include/edge-ml-accelerator/capture/: base_capture.h  genicam_capture.h  opencv_capture.h  pylon_capture.h
source/plugins/capture/src/: base_capture.cc  genicam_capture.cc  opencv_capture.cc  pylon_capture.cc
source/plugins/inference/: CMakeLists.txt  inferenceConfig.cmake.in
source/plugins/inference/cmake/: common.cmake
source/plugins/inference/include/edge-ml-accelerator/inference/: base_inference.h  edgemanager_client.h  lfve_client.h  onnxruntime_client.h  triton_client.h
source/plugins/inference/protos/: edgemanager-agent.proto
source/plugins/inference/scripts/: edgemanager_client.py  lfve_client.py
source/plugins/inference/src/: base_inference.cc  edgemanager_client.cc  lfve_client.cc  onnxruntime_client.cc  triton_client.cc
source/plugins/output/: CMakeLists.txt
source/plugins/output/include/edge-ml-accelerator/output/: base_output.h  local_disk.h  publish_ipc_topic.h  publish_mqtt_topic.h  s3_upload.h
source/plugins/output/src/: base_output.cc  local_disk.cc  publish_ipc_topic.cc  publish_mqtt_topic.cc  s3_upload.cc
source/plugins/pipeline/: CMakeLists.txt  pipelineConfig.cmake.in
source/plugins/pipeline/include/edge-ml-accelerator/pipeline/: pipeline.h
source/plugins/pipeline/src/: pipeline.cc
source/plugins/trigger/: CMakeLists.txt
source/plugins/trigger/include/edge-ml-accelerator/trigger/: base_trigger.h  gpio_trigger.h  ipc_trigger.h  mqtt_trigger.h  soft_trigger.h
source/plugins/trigger/src/: base_trigger.cc  gpio_trigger.cc  ipc_trigger.cc  mqtt_trigger.cc  soft_trigger.cc
source/plugins/utils/: CMakeLists.txt  utilsConfig.cmake.in
source/plugins/utils/include/edge-ml-accelerator/utils/: edge_ml_config.h  image_preprocess.h  json_parser.h  logger.h  mic730ai_dio.h  result_postprocess.h  yaml_parser.h
source/plugins/utils/src/: edge_ml_config.cc  image_preprocess.cc  json_parser.cc  logger.cc  mic730ai_dio.cc  result_postprocess.cc  yaml_parser.cc
source/tests/: CMakeLists.txt
source/tests/test_base_capture/: CMakeLists.txt  test.cc
source/tests/test_base_output/: CMakeLists.txt  test.cc
source/tests/test_base_trigger/: CMakeLists.txt  TEST_CONFIG_BASE_TRIGGER.json  test.cc
source/tests/test_genicam_capture/: CMakeLists.txt  TEST_CONFIG_GENICAM.json  test.cc
source/tests/test_gstreamer_capture/: CMakeLists.txt  TEST_CONFIG_GSTREAMER.json  test.cc
source/tests/test_opencv_capture/: CMakeLists.txt  test.cc
source/tests/test_pylon_capture/: CMakeLists.txt  TEST_CONFIG_PYLON.json  test.cc
